fix: PWA paths for GitHub Pages compatibility
- Change start_url from '/' to './' for subdirectory hosting
- Add scope to manifest
- Fix service worker to use relative paths
- Add proper activate and skipWaiting for service worker
- Better fetch fallback for navigation requests

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "RPC Championships",
   "short_name": "RPC",
   "description": "Rock Paper Scissors Championship Game",
-  "start_url": "/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
