fix: use absolute paths for GitHub Pages subdirectory
- Update manifest with full /rpc-championships/ paths
- Update service worker paths
- Update index.html manifest and icon links

--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
   "name": "RPC Championships",
   "short_name": "RPC",
   "description": "Rock Paper Scissors Championship Game",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/rpc-championships/",
+  "scope": "/rpc-championships/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.svg",
+      "src": "/rpc-championships/icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "icon-512.svg",
+      "src": "/rpc-championships/icon-512.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
